[project]
name = "cross"
version = "0.1.0"
description = ""
authors = [
    {name = "Jordi Hoock",email = "jordi.hoock@bitpanda.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "cashews (>=7.4.0,<8.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
isort = "^6.0.1"
respx = "^0.22.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"